# gnuradio-companion

./: README.md  pyproject.toml
src/gnuradio_companion/: CMakeLists.txt  compiler.py  env_checks.py  main.py
src/gnuradio_companion/core/: Config.py
src/gnuradio_companion/scripts/: CMakeLists.txt
